--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.wzy.zhihudaily.MainActivity">
+    android:background="#55a91d"
+    tools:context="com.wzy.zhihudaily.activity.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="MainActivity"
+        android:gravity="center"
+        android:textSize="40sp"/>
 </RelativeLayout>
